--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,7 +4,7 @@
 
 
 body {
-  background: url(assets/img/background.webp);
+  background: url(../img/background.webp);
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
