--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,10 +4,8 @@
 
 
 body {
-  background: url(../img/background.webp);
-  background-position: bottom;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background: url(../img/background.webp) center top fixed;
+  background-size:cover;
 }
 
 .outline {
