--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,83 +1,13 @@
-/*
- * Globals
- */
-
-
-body {
-  background: url(../img/background.webp) center top fixed;
-  background-size:cover;
+body::before {
+    display: block;
+    content: '';
+    height: 60px;
 }
-
-.outline {
-  -webkit-text-fill-color: white; /* Will override color (regardless of order) */
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: black;
+.avatar {
+    transform: scaleX(-1);
 }
-.card-box {
-  background: rgba(255,255,255,.1);
-}
-.members {
-  margin-top: 30px;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 10px;
-}
-
-.members .member {
-  line-height: 22px;
-  width: 100%;
-  display: inline-block;
-  border-radius: 5px;
-  background: rgba(255,255,255,.1);
-  padding: 10px;
-}
-
-
-/* Custom default button */
-.btn-secondary,
-.btn-secondary:hover,
-.btn-secondary:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritance from `body` */
-}
-
-
-/*
- * Base structure
- */
-
-body {
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-}
-
-.cover-container {
-  max-width: 80em;
-}
-
-
-/*
- * Header
- */
-
-.nav-masthead .nav-link {
-  padding: .25rem 0;
-  font-weight: 700;
-  color: rgba(255, 255, 255, .5);
-  background-color: transparent;
-  border-bottom: .25rem solid transparent;
-}
-
-.nav-masthead .nav-link:hover,
-.nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
-}
-
-.nav-masthead .nav-link + .nav-link {
-  margin-left: 1rem;
-}
-
-.nav-masthead .active {
-  color: #fff;
-  border-bottom-color: #fff;
+@media (min-width: 768px) {
+  .news-input {
+    width: 50%;
+  }
 }
