--- a/src/index.css
+++ b/src/index.css
@@ -101,3 +101,8 @@ content: "";
 display: table;
 clear: both;
 }
+.member-background {
+  background-image: url(./assets/member-background.webp);
+  background-size: cover;
+  background-attachment: fixed;
+}
